Fix Flexbox on iOS

--- a/appgyver_angular_json/www/stylesheets/application.scss
+++ b/appgyver_angular_json/www/stylesheets/application.scss
@@ -21,6 +21,7 @@ input, textarea, [contenteditable] * {
     padding: 0.5rem;
     overflow: hidden;
     display: flex;
+    display: -webkit-box;
   }
   .avatar {
     width: 40px; // stronger than %
